# gguf-clone

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: update-vendor.sh
src/gguf_clone/: __init__.py  artifacts.py  cli.py  common.py  config.py  convert.py  files.py  gguf_path.py  main.py  metadata.py  mlx_discover.py  mlx_params.py  params.py  quantize.py  resolve.py  split.py  vendor_info.py
src/gguf_clone/_vendor/: __init__.py
src/gguf_clone/_vendor/llama_cpp/: __init__.py
src/gguf_clone/stages/: __init__.py  extract_params.py  extract_template.py  extract_template_mlx.py  quantize_gguf.py
tests/: conftest.py
tests/integration/: config.yml  test_integration.py
tests/unit/: test_artifacts.py  test_commands.py  test_config.py  test_main.py  test_metadata.py  test_mlx_discover.py  test_mlx_params.py  test_params.py  test_resolve.py  test_split.py
